Fixed mainmenu ul to right aligned

--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ input:-webkit-autofill:focus {
 }
 
 .mainmenu-area ul.mainmenu {
-    text-align: center;
+    text-align: right;
     float: none;
     display: block;
 }
